cluster-infrastructure/manifests/resources/namespace.yaml
## Create cert-manager namespace
apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager
