cluster-infrastructure/manifests/resources/test-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example
  namespace: testing
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
    - host: test-app.danmaxim.net
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: http-svc
                port:
                  number: 80
            path: /
  tls:
    - hosts:
        - test-app.danmaxim.net
      secretName: test-app-tls
